Add full telegram support